# rapidocr-rs

./: .gitignore  Cargo.toml  README.md  benchmark-baseline.md  parity-gaps.md  roadmap.md
.github/workflows/: ci.yml
config/: local.example.toml  ppocrv5-ch-mobile.toml  ppocrv6-small.toml
crates/rapidocr-cli/: Cargo.toml  README.md
crates/rapidocr-cli/src/: main.rs
crates/rapidocr-core/: Cargo.toml  README.md
crates/rapidocr-core/examples/: library_usage.rs  tokio_usage.rs
crates/rapidocr-core/src/: cancellation.rs  cls.rs  config.rs  db_postprocess.rs  det.rs  e2e_tests.rs  geometry.rs  image_ops.rs  inference.rs  lib.rs  model.rs  rec.rs  tokio.rs  types.rs
docs/: development.md
examples/: cli_usage.ps1
fixtures/db_postprocess/arabic/: expected.json
fixtures/db_postprocess/black_font_color_transparent/: expected.json
fixtures/db_postprocess/ch_doc_server/: expected.json
fixtures/db_postprocess/ch_en_num/: expected.json
fixtures/db_postprocess/check_return_word_len/: expected.json  pred.npy
fixtures/db_postprocess/cyrillic/: expected.json
fixtures/db_postprocess/devanagari/: expected.json  pred.npy
fixtures/db_postprocess/devanagari_rec/: expected.json
fixtures/db_postprocess/el_rec/: expected.json
fixtures/db_postprocess/empty_black/: expected.json  pred.npy
fixtures/db_postprocess/en/: expected.json
fixtures/db_postprocess/en_rec/: expected.json
fixtures/db_postprocess/eslav/: expected.json
fixtures/db_postprocess/img_exif_orientation/: expected.json
fixtures/db_postprocess/issue_170/: expected.json  pred.npy
fixtures/db_postprocess/japan/: expected.json
fixtures/db_postprocess/korean/: expected.json
fixtures/db_postprocess/latin/: expected.json
fixtures/db_postprocess/return_word_debug/: expected.json  pred.npy
fixtures/db_postprocess/short/: expected.json
fixtures/db_postprocess/ta/: expected.json
fixtures/db_postprocess/te/: expected.json
fixtures/db_postprocess/test_letterbox_like/: expected.json
fixtures/db_postprocess/test_without_det/: expected.json
fixtures/db_postprocess/text_det/: expected.json  pred.npy
fixtures/db_postprocess/text_vertical_words/: expected.json
fixtures/db_postprocess/th_rec/: expected.json
fixtures/db_postprocess/white_font_color_transparent/: expected.json
fixtures/e2e/: arabic_det_only.json  black_font_color_transparent_cls.json  black_font_color_transparent_no_cls.json  ch_doc_server_cls.json  ch_doc_server_det_only.json  ch_doc_server_no_cls.json  ch_en_num_cls.json  ch_en_num_det_only.json  ch_en_num_no_cls.json  check_return_word_len_cls.json  check_return_word_len_det_only.json  check_return_word_len_no_cls.json  cyrillic_det_only.json  devanagari_det_only.json  devanagari_rec_det_only.json  devanagari_rec_rec_only_cls.json  devanagari_rec_rec_only_no_cls.json  el_rec_det_only.json  el_rec_rec_only_cls.json  el_rec_rec_only_no_cls.json  empty_black_cls.json  empty_black_no_cls.json  en_cls.json  en_no_cls.json  en_rec_det_only.json  en_rec_rec_only_cls.json  en_rec_rec_only_no_cls.json  eslav_cls.json  eslav_det_only.json  eslav_no_cls.json  img_exif_orientation_cls.json  img_exif_orientation_no_cls.json  issue_170_cls.json  issue_170_no_cls.json  japan_det_only.json  korean_det_only.json  latin_cls.json  latin_no_cls.json  return_word_debug_cls.json  short_cls.json  (+26 more)
tools/: bench_e2e.py  export_db_fixture.py  export_e2e_fixture.py
