[package]
name = "rapidocr-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rapidocr-core = { path = "../rapidocr-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "rapidocr"
path = "src/main.rs"
