[package]
name = "rapidocr-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line wrapper for validating and benchmarking rapidocr-core OCR pipelines"
readme = "README.md"
keywords = ["ocr", "onnx", "rapidocr", "cli"]
categories = ["command-line-utilities", "computer-vision"]
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rapidocr-core = { path = "../rapidocr-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "rapidocr"
path = "src/main.rs"
