[package]
name = "rapidocr-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rapidocr_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
image = "0.25"
imageproc = "0.25"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", default-features = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
ndarray-npy = "0.10"
serde_json = "1"
